--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 PORT=5000
 
 # Database
-DATABASE_URL="postgresql://dikpusdb:dbpassword@localhost:5433/dikpus"
+DATABASE_URL="postgresql://bantaioskm:dbpassword@localhost:5433/oskmdb"
