--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,9 +4,9 @@ services:
   db:
     image: postgres:latest
     environment:
-      POSTGRES_USER: dikpusdb
+      POSTGRES_USER: bantaioskm
       POSTGRES_PASSWORD: dbpassword
-      POSTGRES_DB: dikpus
+      POSTGRES_DB: oskmdb
       POSTGRES_HOST: db
     ports:
       - '5433:5432'
