--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "db:push": "drizzle-kit push",
+    "db:seed": "tsx src/db/seeder.ts",
     "format:fix": "prettier --write .",
     "format:check": "prettier --check ."
   },
